<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpCenter">

    <!-- Header -->
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/ic_bluetop"
        android:paddingTop="15dp"
        android:paddingBottom="10dp">

        <!-- Back Button -->
        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="goBack"
            app:srcCompat="@drawable/ic_goback" />

        <!-- Title -->
        <TextView
            android:id="@+id/nav_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/atyp_medium"
            android:text="Help Center"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_2.0"
        android:layout_below="@id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/atyp_medium"
                    android:text="Seller Help Center"
                    android:textColor="@color/text"
                    android:textSize="26sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="3dp">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_update" />

                    <TextView
                        android:id="@+id/textView25"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/atyp_medium"
                        android:paddingStart="3dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        android:text="Last Update: 11 January 2025"
                        android:textColor="@color/grey"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/atyp_medium"
                android:text="Welcome to TapNBite Help Center!"
                android:textColor="@color/text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/atyp_regular"
                android:lineSpacingExtra="3dp"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:text="@string/seller_help_welcome"
                android:textColor="@color/text"
                android:justificationMode="inter_word"
                android:textSize="15sp" />



            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/atyp_medium"
                android:text="Getting Started"
                android:textColor="@color/text"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/atyp_medium"
                android:text="How do I list my products?"
                android:textColor="@color/text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/atyp_regular"
                android:paddingTop="5dp"
                android:lineSpacingExtra="3dp"
                android:paddingBottom="10dp"
                android:justificationMode="inter_word"
                android:text="@string/seller_account_setup"
                android:textColor="@color/text"
                android:textSize="15sp" />


            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/atyp_medium"
                android:text="Managing Orders and Inventory"
                android:textColor="@color/text"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/textView40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/atyp_medium"
                android:text= "How do I manage incoming orders?"
                android:textColor="@color/text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView41"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/atyp_regular"
                android:justificationMode="inter_word"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"

                android:paddingEnd="5dp"
                android:text="@string/seller_order_management"
                android:textColor="@color/text"
                android:lineSpacingExtra="3dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView42"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/atyp_medium"
                android:text="Can I update my menu or inventory?"
                android:textColor="@color/text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView43"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/atyp_regular"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="3dp"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:text="@string/seller_menu_updates"
                android:textColor="@color/text"
                android:textSize="15sp" />

            <View
                android:id="@+id/divider8"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/textView44"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/atyp_medium"
                android:text="Payments and Financial Management"
                android:textColor="@color/text"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/textView45"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/atyp_medium"
                android:text="How do I receive payments?"
                android:textColor="@color/text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView46"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/atyp_regular"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="3dp"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:text="@string/seller_payments"
                android:textColor="@color/text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView49"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/atyp_medium"
                android:text="Can I view my sales performance?"
                android:textColor="@color/text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/atyp_regular"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="3dp"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:text="@string/seller_sales_analytics"
                android:textColor="@color/text"
                android:textSize="15sp" />


            <View
                android:id="@+id/divider9"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/textView51"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/atyp_medium"
                android:text="Troubleshooting and Support"
                android:textColor="@color/text"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/textView52"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/atyp_medium"
                android:text="What should I do if I encounter technical issues?"
                android:textColor="@color/text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView53"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/atyp_regular"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="3dp"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:text="@string/seller_technical_support"
                android:textColor="@color/text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView54"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/atyp_medium"
                android:text="How do I report fraudulent activity?"
                android:textColor="@color/text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView55"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/atyp_regular"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="3dp"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:text="@string/seller_fraud_prevention"
                android:textColor="@color/text"
                android:textSize="15sp" />

            <View
                android:id="@+id/divider10"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/textView56"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/atyp_medium"
                android:text="Policies and Guidelines"
                android:textColor="@color/text"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/textView57"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/atyp_medium"
                android:text="What are the selling policies on TapNBite?"
                android:textColor="@color/text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView58"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/atyp_regular"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="3dp"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:text="@string/seller_responsibilities"
                android:textColor="@color/text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView59"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/atyp_medium"
                android:text="Can I accept payments outside the app?"
                android:textColor="@color/text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView60"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/atyp_regular"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="3dp"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:text="@string/seller_transaction_policy"
                android:textColor="@color/text"
                android:textSize="15sp" />

            <View
                android:id="@+id/divider11"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/textView61"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/atyp_medium"
                android:text="Direct Support Options"
                android:textColor="@color/text"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/textView62"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/atyp_medium"
                android:text="Need further assistance? Here’s how to get in touch:"
                android:textColor="@color/text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView63"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/atyp_regular"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="3dp"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:text="@string/seller_email_support"
                android:textColor="@color/text"
                android:textSize="15sp" />

            <View
                android:id="@+id/divider12"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="@color/light_2.0" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>