<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrivacyPolicy">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/gradient_custom">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="#0000"
                android:contentDescription="goBack"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.04"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.41000003"
                app:srcCompat="@drawable/ic_goback" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/frameLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/atyp_medium"
                    android:text="Terms and Conditions"
                    android:textColor="@color/text"
                    android:textSize="26sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="3dp">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_update" />

                    <TextView
                        android:id="@+id/textView25"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/atyp_medium"
                        android:paddingStart="3dp"
                        android:paddingTop="3dp"
                        android:paddingBottom="4dp"
                        android:text="Last Update: 11 January 2025"
                        android:textColor="@color/grey"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/atyp_medium"
                android:text="@string/welcome_msg"
                android:textColor="@color/text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/atyp_semi_bold"
                android:text="1. Seller Account and Access"
                android:textColor="@color/text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/atyp_regular"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/seller_access"
                android:textColor="@color/text"
                android:textSize="15sp" />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/atyp_semi_bold"
                android:text="2. Order Management and Updates"
                android:textColor="@color/text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/atyp_regular"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/order_mgmt"
                android:textColor="@color/text"
                android:textSize="15sp" />

            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/atyp_semi_bold"
                android:text="3. Payments and Transactions"
                android:textColor="@color/text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/atyp_regular"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/payments"
                android:textColor="@color/text"
                android:textSize="15sp" />

            <View
                android:id="@+id/divider7"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/atyp_semi_bold"
                android:text="4. Operational Flexibility and Notifications"
                android:textColor="@color/text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/atyp_regular"
                android:paddingTop="10dp"
                android:paddingBottom="100dp"
                android:text="@string/ops_flex"
                android:textColor="@color/text"
                android:textSize="15sp" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>